New endpoint address candidates
