# handlers/quote.go
@@ -10,12 +10,10 @@ import (
 
 func GetQuoteQuoteIDHandler(params operations.GetQuoteQuoteIDParams) middleware.Responder {
 	quoteID := params.QuoteID
-	state := params.State
-	city := params.City
 
 	payload := operations.GetQuoteQuoteIDOKBody{}
 	response := operations.NewGetQuoteQuoteIDOK().WithPayload(&payload)
-	quote, business, err := database.GetQuoteServiceDetails(quoteID, state, city)
+	quote, business, err := database.GetQuoteServiceDetails(quoteID)
 	if err != nil {
 		log.Printf("Failed to get quote, %s", err)
 		return response
