# restapi/operations/get_address_responses.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// GetAddressOKCode is the HTTP code returned for type GetAddressOK
+const GetAddressOKCode int = 200
+
+/*GetAddressOK City and State of end user
+
+swagger:response getAddressOK
+*/
+type GetAddressOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *GetAddressOKBody `json:"body,omitempty"`
+}
+
+// NewGetAddressOK creates GetAddressOK with default headers values
+func NewGetAddressOK() *GetAddressOK {
+
+	return &GetAddressOK{}
+}
+
+// WithPayload adds the payload to the get address o k response
+func (o *GetAddressOK) WithPayload(payload *GetAddressOKBody) *GetAddressOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get address o k response
+func (o *GetAddressOK) SetPayload(payload *GetAddressOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAddressOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
